--- a/backend/products/package.json
+++ b/backend/products/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.13.0",
     "sequelize": "^6.37.6"
