--- a/backend/products/package.json
+++ b/backend/products/package.json
@@ -20,6 +20,7 @@
     "fs": "^0.0.1-security",
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.13.0",
     "sequelize": "^6.37.6"
   },
