--- a/ECommerceApp/package.json
+++ b/ECommerceApp/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "axios": "^1.8.4",
     "expo": "~52.0.37",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
