--- a/ECommerceApp/package.json
+++ b/ECommerceApp/package.json
@@ -17,10 +17,13 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.8.4",
+    "base-64": "^1.0.0",
     "expo": "~52.0.37",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
