--- a/ECommerceApp/app.json
+++ b/ECommerceApp/app.json
@@ -19,10 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ing_alejandro_puentes.ECommerceApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "866491a6-34f3-4537-9dfc-5432dd6ebd75"
+      }
     }
   }
 }
